fixed content spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ button:hover {
   padding: 100px 20px;
   /* margin: 20px; */
   /* color: blue; */
-  display: flex;
+  /* display: flex; */
 }
 
 .contents-inner {
